Closed Bug 618948 Opened 15 years ago Closed 15 years ago

foo.oninput and foo.oninvalid should be working

Categories

(Core :: DOM: Events, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b9

People

(Reporter: mounir, Assigned: mounir)

Details

(Keywords: html5)

Attachments

(1 file)

It looks like a lot of properties to define event handlers are not available. See the exhaustive list here: http://www.whatwg.org/specs/web-apps/current-work/multipage/elements.html#elements-in-the-dom
I think this is a dup. Currently we add onfoo listeners in nsDOMClassInfo, but we should change that.
(In reply to comment #1) > I think this is a dup. Currently we add onfoo listeners in nsDOMClassInfo, but > we should change that. A dup of which bug? Actually, this bug could be spitted in two: 1. oninput, oninvalid, onchange (and probably some other) properties doesn't work if set. 2. all on<eventName> are not valid properties of HTMLElement. Is 2. the dup?
Summary: Define oninput, oninvalid, onchange and other properties related to events on HTMLElement → foo.oninput and foo.oninvalid should be working
Attached patch Patch v1Splinter Review
Assignee: nobody → mounir.lamouri
Status: NEW → ASSIGNED
Attachment #499013 - Flags: review?(Olli.Pettay)
Whiteboard: [passed-try][needs-review]
Attachment #499013 - Flags: review?(Olli.Pettay) → review+
Attachment #499013 - Flags: approval2.0?
Approval request: there is no way to check if oninput or oninvalid is supported by Firefox by an author because |"oninput" in inputElement| will always return false for the moment. I think we should make sure it will work given that we support the events.
Whiteboard: [passed-try][needs-review] → [passed-try][needs-approval]
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [passed-try][needs-approval]
Target Milestone: --- → mozilla2.0b9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: