Bug 618948 - Add support for element.oninput and element.oninvalid. r=smaug a=sicking